option('markdown_backend',
  type: 'combo',
  choices: ['auto', 'cmark-gfm', 'md4c', 'cmark'],
  value: 'auto',
  description: 'Select Markdown backend (auto uses best available)'
)

option('podofo',
  type: 'feature',
  value: 'auto',
  description: 'Enable PDF export for Fountain documents (via PoDoFo)'
)
